--- a/restapi/requirements.txt
+++ b/restapi/requirements.txt
@@ -23,9 +23,11 @@ itsdangerous
 Pillow
 phonenumbers
 fastapi-jwt-auth[asymmetric]
+fastapi-utils
 pytesseract
 opencv-python
 numpy
+psutil
 qrcode
 user-agents
 dhash
