information about server

--- a/restapi/.env.example
+++ b/restapi/.env.example
@@ -10,6 +10,8 @@ authjwt_secret_key=s3Cr3T
 authjwt_cookie_secure=false
 timezone=Asia/Kuala_Lumpur
 stage_app=development
+vps_expired=2022-07-30
+domain_expired=2022-07-29
 
 # Docker Settings
 POSTGRES_HOST=postgres
