--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,10 @@ jobs:
         run: cp .env.example .env
       - name: Build the stack
         run: docker-compose up -d
+      - name: Create Database
+        run: bash scripts/create-db.sh
       - name: Migrate Database
-        run: bash scripts/migrate.sh
+        run: bash scripts/migrate-db.sh
       - name: Test
         run: bash scripts/test.sh
       - uses: actions/setup-python@master
